# AdventOfCode

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ReadMe.txt  compile_commands.json  conanfile.py
2021/: CMakeLists.txt
2021/Day1/: CMakeLists.txt  main.cpp
2021/Day2/: CMakeLists.txt  main.cpp
2021/Day3/: CMakeLists.txt  main.cpp
2021/Day4/: CMakeLists.txt  main.cpp
2024/: CMakeLists.txt
2024/Day01/: main.cpp
2024/Day02/: CMakeLists.txt
2024/Day_01/: CMakeLists.txt
2024/Day_02/: main.cpp
2024/Day_03/: CMakeLists.txt  main.cpp
2024/Day_04/: CMakeLists.txt  main.cpp
cmake/: Conan.cmake
